// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apiHandler handleEvent lataaProjekti should load a new project from Velho 1`] = `
Object {
  "__typename": "Projekti",
  "kayttoOikeudet": Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "kayttajatunnus": "A123",
      "muokattavissa": false,
      "nimi": "Projari, Pekka",
      "organisaatio": "Väylävirasto",
      "tyyppi": "PROJEKTIPAALLIKKO",
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "kayttajatunnus": "A000111",
      "muokattavissa": true,
      "nimi": "Meikäläinen, Matti",
      "organisaatio": "ELY",
      "tyyppi": "VARAHENKILO",
    },
  ],
  "muistiinpano": "Testiprojekti 1:n muistiinpano",
  "oid": "1",
  "tallennettu": false,
  "tyyppi": "TIE",
  "velho": Object {
    "__typename": "Velho",
    "nimi": "Testiprojekti 1",
    "tyyppi": "TIE",
    "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
  },
}
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 1`] = `
Array [
  "Initial state with projektipaallikko and omistaja",
  Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "kayttajatunnus": "A123",
      "muokattavissa": false,
      "nimi": "Projari, Pekka",
      "organisaatio": "Väylävirasto",
      "tyyppi": "PROJEKTIPAALLIKKO",
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "kayttajatunnus": "A000111",
      "muokattavissa": true,
      "nimi": "Meikäläinen, Matti",
      "organisaatio": "ELY",
      "tyyppi": "VARAHENKILO",
    },
  ],
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 2`] = `
Array [
  "Create projekti having having both projektipaallikko and omistaja",
  Object {
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "tyyppi": "PROJEKTIPAALLIKKO",
      },
      Object {
        "email": "matti.meikalainen@vayla.fi",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "22",
        "tyyppi": undefined,
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "tallennettu": true,
    "velho": Object {
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 3`] = `
Array [
  "Loaded projekti having having both projektipaallikko and omistaja",
  Object {
    "__typename": "Projekti",
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "pekka.projari@vayla.fi",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "tyyppi": "PROJEKTIPAALLIKKO",
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "matti.meikalainen@vayla.fi",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "22",
        "tyyppi": undefined,
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "status": "EI_JULKAISTU",
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 4`] = `
Array [
  "Save projekti having only projektipaallikko",
  Object {
    "aloitusKuulutus": undefined,
    "euRahoitus": undefined,
    "hyvaksymisPaatosVaihe": undefined,
    "kasittelynTila": undefined,
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "tyyppi": "PROJEKTIPAALLIKKO",
      },
    ],
    "kielitiedot": undefined,
    "liittyvatSuunnitelmat": undefined,
    "muistiinpano": undefined,
    "nahtavillaoloVaihe": undefined,
    "oid": "1",
    "salt": "***unittest***",
    "suunnitteluSopimus": undefined,
    "suunnitteluVaihe": undefined,
    "vuorovaikutukset": undefined,
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 5`] = `
Array [
  "Loaded projekti having only projektipaallikko",
  Object {
    "__typename": "Projekti",
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "pekka.projari@vayla.fi",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "tyyppi": "PROJEKTIPAALLIKKO",
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "status": "EI_JULKAISTU",
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 6`] = `
Array [
  "Save projekti having while adding other user back. There should be projektipaallikko and one user in the projekti now. Projektipaallikko cannot be removed, so it always stays there.",
  Object {
    "aloitusKuulutus": undefined,
    "euRahoitus": undefined,
    "hyvaksymisPaatosVaihe": undefined,
    "kasittelynTila": undefined,
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "tyyppi": "PROJEKTIPAALLIKKO",
      },
      Object {
        "email": "matti.meikalainen@vayla.fi",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "tyyppi": undefined,
      },
    ],
    "kielitiedot": undefined,
    "liittyvatSuunnitelmat": undefined,
    "muistiinpano": undefined,
    "nahtavillaoloVaihe": undefined,
    "oid": "1",
    "salt": "***unittest***",
    "suunnitteluSopimus": undefined,
    "suunnitteluVaihe": undefined,
    "vuorovaikutukset": undefined,
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 7`] = `
Array [
  "Loaded projekti having while adding other user back. There should be projektipaallikko and one user in the projekti now. Projektipaallikko cannot be removed, so it always stays there.",
  Object {
    "__typename": "Projekti",
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "pekka.projari@vayla.fi",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "tyyppi": "PROJEKTIPAALLIKKO",
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "matti.meikalainen@vayla.fi",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "tyyppi": undefined,
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "status": "EI_JULKAISTU",
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 8`] = `
Array [
  "Save projekti having while adding one muokkaaja more. There should be three persons in the projekti now",
  Object {
    "aloitusKuulutus": Object {
      "hankkeenKuvaus": Object {
        "RUOTSI": "På Svenska",
        "SAAME": "Saameksi",
        "SUOMI": "Lorem Ipsum",
      },
      "ilmoituksenVastaanottajat": Object {
        "kunnat": Array [
          Object {
            "lahetetty": "2022-09-28T00:00",
            "nimi": "Mikkeli",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "lahetetty": "2022-09-28T00:00",
            "nimi": " Juva",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "lahetetty": "2022-09-28T00:00",
            "nimi": " Savonlinna",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "lahetetty": "2022-09-28T00:00",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-01-02",
      "kuulutusYhteystiedot": Object {
        "yhteysHenkilot": undefined,
        "yhteysTiedot": Array [
          Object {
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      "siirtyySuunnitteluVaiheeseen": "2999-01-01",
    },
    "euRahoitus": false,
    "hyvaksymisPaatosVaihe": undefined,
    "kasittelynTila": undefined,
    "kayttoOikeudet": Array [
      Object {
        "email": "pekka.projari@vayla.fi",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "tyyppi": "PROJEKTIPAALLIKKO",
      },
      Object {
        "email": "matti.meikalainen@vayla.fi",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "tyyppi": undefined,
      },
      Object {
        "email": "a2@vayla.fi",
        "kayttajatunnus": "A2",
        "muokattavissa": true,
        "nimi": "SukunimiA2, EtunimiA2",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "123456789",
        "tyyppi": undefined,
      },
    ],
    "kielitiedot": Object {
      "ensisijainenKieli": "SUOMI",
      "projektinNimiVieraskielella": "Projektin nimi saameksi",
      "toissijainenKieli": "SAAME",
    },
    "liittyvatSuunnitelmat": undefined,
    "muistiinpano": undefined,
    "nahtavillaoloVaihe": undefined,
    "oid": "1",
    "salt": "***unittest***",
    "suunnitteluSopimus": Object {
      "kunta": "Nokia",
      "logo": "/suunnittelusopimus/logo.gif",
      "yhteysHenkilo": "A2",
    },
    "suunnitteluVaihe": undefined,
    "vuorovaikutukset": undefined,
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 9`] = `
Array [
  "Loaded projekti having while adding one muokkaaja more. There should be three persons in the projekti now",
  Object {
    "__typename": "Projekti",
    "aloitusKuulutus": Object {
      "__typename": "AloitusKuulutus",
      "hankkeenKuvaus": Object {
        "RUOTSI": "På Svenska",
        "SAAME": "Saameksi",
        "SUOMI": "Lorem Ipsum",
        "__typename": "HankkeenKuvaukset",
      },
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-09-28T00:00",
            "nimi": "Mikkeli",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-09-28T00:00",
            "nimi": " Juva",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-09-28T00:00",
            "nimi": " Savonlinna",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-09-28T00:00",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-01-02",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": undefined,
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      "siirtyySuunnitteluVaiheeseen": "2999-01-01",
    },
    "euRahoitus": false,
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "pekka.projari@vayla.fi",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "tyyppi": "PROJEKTIPAALLIKKO",
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "matti.meikalainen@vayla.fi",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "tyyppi": undefined,
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "email": "a2@vayla.fi",
        "kayttajatunnus": "A2",
        "muokattavissa": true,
        "nimi": "SukunimiA2, EtunimiA2",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "123456789",
        "tyyppi": undefined,
      },
    ],
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
      "projektinNimiVieraskielella": "Projektin nimi saameksi",
      "toissijainenKieli": "SAAME",
    },
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "status": "ALOITUSKUULUTUS",
    "suunnitteluSopimus": Object {
      "__typename": "SuunnitteluSopimus",
      "kunta": "Nokia",
      "logo": "/yllapito/tiedostot/projekti/1/suunnittelusopimus/logo.gif",
      "yhteysHenkilo": "A2",
    },
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "nimi": "Testiprojekti 1",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 10`] = `
Array [
  Object {
    "Bucket": "hassu-localstack-yllapito",
    "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
    "ContentType": "application/pdf",
    "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-public",
    "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
    "ContentType": "application/pdf",
    "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-yllapito",
    "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
    "ContentType": "application/pdf",
    "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-public",
    "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
    "ContentType": "application/pdf",
    "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-yllapito",
    "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
    "ContentType": "application/pdf",
    "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-public",
    "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
    "ContentType": "application/pdf",
    "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-yllapito",
    "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
    "ContentType": "application/pdf",
    "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-public",
    "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
    "ContentType": "application/pdf",
    "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-yllapito",
    "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
    "ContentType": "application/pdf",
    "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-public",
    "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
    "ContentType": "application/pdf",
    "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-yllapito",
    "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
    "ContentType": "application/pdf",
    "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-public",
    "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
    "ContentType": "application/pdf",
    "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-yllapito",
    "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
    "ContentType": "application/pdf",
    "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-public",
    "ContentDisposition": "inline; filename*=UTF-8''T412%20Aloituskuulutus.pdf",
    "ContentType": "application/pdf",
    "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-yllapito",
    "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
    "ContentType": "application/pdf",
    "Key": "yllapito/tiedostot/projekti/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-public",
    "ContentDisposition": "inline; filename*=UTF-8''T412_1%20Ilmoitus%20aloituskuulutuksesta.pdf",
    "ContentType": "application/pdf",
    "Key": "tiedostot/suunnitelma/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
  },
  Object {
    "Bucket": "hassu-localstack-public",
    "CopySource": "hassu-localstack-yllapito/yllapito/tiedostot/projekti/1/suunnittelusopimus/logo.gif",
    "Key": "tiedostot/suunnitelma/1/suunnittelusopimus/logo.gif",
    "Metadata": Object {
      "publication-timestamp": "2022-01-02T00:00:00+02:00",
    },
    "MetadataDirective": "REPLACE",
  },
]
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 11`] = `
Object {
  "__typename": "Projekti",
  "aloitusKuulutus": Object {
    "__typename": "AloitusKuulutus",
    "hankkeenKuvaus": Object {
      "RUOTSI": "På Svenska",
      "SAAME": "Saameksi",
      "SUOMI": "Lorem Ipsum",
      "__typename": "HankkeenKuvaukset",
    },
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-09-28T00:00",
          "nimi": "Mikkeli",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-09-28T00:00",
          "nimi": " Juva",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-09-28T00:00",
          "nimi": " Savonlinna",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-09-28T00:00",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kuulutusPaiva": "2022-01-02",
    "kuulutusYhteystiedot": Object {
      "__typename": "StandardiYhteystiedot",
      "yhteysHenkilot": undefined,
      "yhteysTiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "palautusSyy": null,
    "siirtyySuunnitteluVaiheeseen": "2999-01-01",
  },
  "aloitusKuulutusJulkaisut": Array [
    Object {
      "__typename": "AloitusKuulutusJulkaisu",
      "aloituskuulutusPDFt": Object {
        "SUOMI": Object {
          "__typename": "AloitusKuulutusPDF",
          "aloituskuulutusIlmoitusPDFPath": "/yllapito/tiedostot/projekti/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
          "aloituskuulutusPDFPath": "/yllapito/tiedostot/projekti/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
        },
        "__typename": "AloitusKuulutusPDFt",
      },
      "hankkeenKuvaus": Object {
        "RUOTSI": "På Svenska",
        "SAAME": "Saameksi",
        "SUOMI": "Lorem Ipsum",
        "__typename": "HankkeenKuvaukset",
      },
      "hyvaksyja": "A123",
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-09-28T00:00",
            "nimi": "Mikkeli",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-09-28T00:00",
            "nimi": " Juva",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-09-28T00:00",
            "nimi": " Savonlinna",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-09-28T00:00",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Projektin nimi saameksi",
        "toissijainenKieli": "SAAME",
      },
      "kuulutusPaiva": "2022-01-02",
      "muokkaaja": "A123",
      "siirtyySuunnitteluVaiheeseen": "2999-01-01",
      "suunnitteluSopimus": Object {
        "__typename": "SuunnitteluSopimusJulkaisu",
        "email": "a2@vayla.fi",
        "etunimi": "EtunimiA2",
        "kunta": "Nokia",
        "logo": "/yllapito/tiedostot/projekti/1/suunnittelusopimus/logo.gif",
        "puhelinnumero": "123456789",
        "sukunimi": "SukunimiA2",
      },
      "tila": "HYVAKSYTTY",
      "velho": Object {
        "__typename": "Velho",
        "nimi": "Testiprojekti 1",
        "tyyppi": "TIE",
        "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Pekka",
          "organisaatio": "Väylävirasto",
          "puhelinnumero": "11",
          "sahkoposti": "pekka.projari@vayla.fi",
          "sukunimi": "Projari",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  ],
  "euRahoitus": false,
  "kayttoOikeudet": Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "kayttajatunnus": "A123",
      "muokattavissa": false,
      "nimi": "Projari, Pekka",
      "organisaatio": "Väylävirasto",
      "puhelinnumero": "11",
      "tyyppi": "PROJEKTIPAALLIKKO",
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "kayttajatunnus": "A000111",
      "muokattavissa": true,
      "nimi": "Meikäläinen, Matti",
      "organisaatio": "ELY",
      "puhelinnumero": "123456789",
      "tyyppi": undefined,
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "a2@vayla.fi",
      "kayttajatunnus": "A2",
      "muokattavissa": true,
      "nimi": "SukunimiA2, EtunimiA2",
      "organisaatio": "Väylävirasto",
      "puhelinnumero": "123456789",
      "tyyppi": undefined,
    },
  ],
  "kielitiedot": Object {
    "__typename": "Kielitiedot",
    "ensisijainenKieli": "SUOMI",
    "projektinNimiVieraskielella": "Projektin nimi saameksi",
    "toissijainenKieli": "SAAME",
  },
  "muistiinpano": "Testiprojekti 1:n muistiinpano",
  "oid": "1",
  "status": "SUUNNITTELU",
  "suunnitteluSopimus": Object {
    "__typename": "SuunnitteluSopimus",
    "kunta": "Nokia",
    "logo": "/yllapito/tiedostot/projekti/1/suunnittelusopimus/logo.gif",
    "yhteysHenkilo": "A2",
  },
  "tallennettu": true,
  "tyyppi": "TIE",
  "velho": Object {
    "__typename": "Velho",
    "nimi": "Testiprojekti 1",
    "tyyppi": "TIE",
    "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
  },
}
`;

exports[`apiHandler handleEvent tallennaProjekti should modify permissions from a project successfully 12`] = `
Object {
  "description": "Public version of the projekti",
  "projekti": Object {
    "__typename": "ProjektiJulkinen",
    "aloitusKuulutusJulkaisut": Array [
      Object {
        "__typename": "AloitusKuulutusJulkaisuJulkinen",
        "aloituskuulutusPDFt": Object {
          "SUOMI": Object {
            "__typename": "AloitusKuulutusPDF",
            "aloituskuulutusIlmoitusPDFPath": "/tiedostot/suunnitelma/1/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
            "aloituskuulutusPDFPath": "/tiedostot/suunnitelma/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
          },
          "__typename": "AloitusKuulutusPDFt",
        },
        "hankkeenKuvaus": Object {
          "RUOTSI": "På Svenska",
          "SAAME": "Saameksi",
          "SUOMI": "Lorem Ipsum",
          "__typename": "HankkeenKuvaukset",
        },
        "kielitiedot": Object {
          "__typename": "Kielitiedot",
          "ensisijainenKieli": "SUOMI",
          "projektinNimiVieraskielella": "Projektin nimi saameksi",
          "toissijainenKieli": "SAAME",
        },
        "kuulutusPaiva": "2022-01-02",
        "siirtyySuunnitteluVaiheeseen": "2999-01-01",
        "suunnitteluSopimus": Object {
          "__typename": "SuunnitteluSopimusJulkaisu",
          "email": "a2@vayla.fi",
          "etunimi": "EtunimiA2",
          "kunta": "Nokia",
          "logo": "/tiedostot/suunnitelma/1/suunnittelusopimus/logo.gif",
          "puhelinnumero": "123456789",
          "sukunimi": "SukunimiA2",
        },
        "tila": "HYVAKSYTTY",
        "velho": Object {
          "__typename": "VelhoJulkinen",
          "asiatunnusELY": undefined,
          "asiatunnusVayla": undefined,
          "kunnat": undefined,
          "kuvaus": undefined,
          "maakunnat": undefined,
          "nimi": "Testiprojekti 1",
          "suunnittelustaVastaavaViranomainen": undefined,
          "toteuttavaOrganisaatio": undefined,
          "tyyppi": "TIE",
          "vaylamuoto": undefined,
        },
        "yhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Pekka",
            "organisaatio": "Väylävirasto",
            "puhelinnumero": "11",
            "sahkoposti": "pekka.projari@vayla.fi",
            "sukunimi": "Projari",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
    ],
    "euRahoitus": false,
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
      "projektinNimiVieraskielella": "Projektin nimi saameksi",
      "toissijainenKieli": "SAAME",
    },
    "oid": "1",
    "projektiHenkilot": Array [
      Object {
        "__typename": "ProjektiKayttajaJulkinen",
        "email": "pekka.projari@vayla.fi",
        "id": "0",
        "nimi": "Projari, Pekka",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
      },
      Object {
        "__typename": "ProjektiKayttajaJulkinen",
        "email": "matti.meikalainen@vayla.fi",
        "id": "1",
        "nimi": "Meikäläinen, Matti",
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
      },
      Object {
        "__typename": "ProjektiKayttajaJulkinen",
        "email": "a2@vayla.fi",
        "id": "2",
        "nimi": "SukunimiA2, EtunimiA2",
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "123456789",
      },
    ],
    "status": "ALOITUSKUULUTUS",
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": undefined,
      "kunnat": undefined,
      "kuvaus": undefined,
      "maakunnat": undefined,
      "nimi": "Testiprojekti 1",
      "suunnittelustaVastaavaViranomainen": undefined,
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": undefined,
    },
  },
}
`;
